--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,8 @@
 
 @layer base {
   :root {
-    --color-white: 254 254 254;
+    --color-white: 255 255 255;
+    --color-black: 17 17 17;
     --color-primary: 99 102 241;
     --color-secondary: 79 70 229;
     --text-primary: 23 23 23;
