--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,7 +28,10 @@
 }
 
 @layer utilities {
-  .cliper {
+  .cliper-bottom {
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+  }
+  .cliper-top {
     clip-path: polygon(0 10%, 100% 0, 100% 100%, 0 100%);
   }
 }
