--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,7 +14,9 @@
 
   * {
     box-sizing: border-box;
-    font-family: 'Playfair Display', playfair-display;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
   }
 
   html,
