--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,19 +3,9 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --color-white: 255 255 255;
-    --color-black: 11 11 11;
-    --color-primary: 99 102 241;
-    --color-secondary: 79 70 229;
-    --text-primary: 23 23 23;
-    --text-secondary: 38 38 38;
-  }
-
   * {
     box-sizing: border-box;
-    font-family: 'Inter';
-    font-style: normal;
+    font-family: 'Inter', sans-serif;
     font-weight: 400;
   }
 
