--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+.slideRight img {
+  animation: slideRight 0.5s ease-out;
+}
+
+@keyframes slideRight {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 @layer base {
   * {
     box-sizing: border-box;
